# 1c-addin-cxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: c12cxx-config.cmake.in
examples/: CMakeLists.txt
examples/component1/: CMakeLists.txt
examples/component1/src/: Component1.cpp
include/c12cxx/: c12cxx.h
include/c12cxx/details/: Component.h  Metadata.h  Method.h  MethodWrapper.h  Property.h  ValueAccessor.h  function_traits.h  isocalendar.h  utfutils.h
include/c12cxx/details/api/: AddInDefBase.h  ComponentBase.h  IMemoryManager.h  com.h  types.h
scripts/: format.sh
src/: Component.cpp  c12cxx.cpp  dllmain.cpp  exports.cpp  isocalendar.cpp  utfutils.cpp
src/utf8/: checked.h  core.h  cpp17.h  cpp20.h  unchecked.h
tests/: CMakeLists.txt  MethodWrapper_test.cpp  ValueAccessor_test.cpp  component_test.cpp  test_utils.h
